fixed stats dark mode. voting error modal now takes color as argument and shows it in red for wrong voting

--- a/Interface/src/assets/base.css
+++ b/Interface/src/assets/base.css
@@ -122,3 +122,12 @@ body {
 .buttoncreatevoting:hover {
   background-color: #45a049;
 }
+
+.dark-mode .dark {
+  background-color: #15202b;
+  color: white;
+}
+.dark-mode .dark-light {
+  background-color: #26334e !important;
+  color: white;
+}
